--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body {
 	width: 100%;
 	margin: 0px;
-	background-image: url(https://tp.maomeng.cf);
+	background-image: url(https://i.imgtg.com/2022/10/14/JFpvC.jpg);
 	background-repeat: repeat-y no-repeat;
 	background-size: cover;
 	background-position: center;
